# lean-refine

./: README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
skills/refine/: SKILL.md
src/lean_refine/: cli.py
src/lean_refine/prompts/: analyze.md  formalize.md  loop.md  metric.md  protocol.md
