[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lean-refine"
version = "0.1.0"
description = "Autonomous code hardening via Invariant Enforcement Score optimization"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
refine = "lean_refine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lean_refine"]
